--- a/Diagnosis.App/Controls/Search/Tag.xaml
+++ b/Diagnosis.App/Controls/Search/Tag.xaml
@@ -74,7 +74,7 @@
                     <Setter Property="Background"
                             Value="White" />
                     <Setter Property="FontSize"
-                            Value="14" />
+                            Value="{DynamicResource TagFontSize}" />
                     <Setter Property="FontStyle"
                             Value="Italic" />
                     <!--border on focused /hover only-->
