--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -83,6 +83,12 @@
                         Grid.Row="1" />
 
         <DockPanel Grid.Row="3">
+            <DockPanel.Resources>
+                <Style TargetType="TextBlock">
+                    <Setter Property="FontSize"
+                            Value="{DynamicResource HelpFontSize}" />
+                </Style>
+            </DockPanel.Resources>
             <TextBlock TextWrapping="Wrap"
                        Margin="10"
                        HorizontalAlignment="Center"
@@ -108,7 +114,8 @@
                   Margin="0,10,0,0"                
                   GotKeyboardFocus="dataGrid_GotKeyboardFocus"
                   SelectedCellsChanged="dataGrid_SelectedCellsChanged"
-                  Style="{DynamicResource MyDataGridStyle}">
+                  Style="{DynamicResource MyDataGridStyle}"
+                  d:IsHidden="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Имя"
                                     IsReadOnly="True"
