xaml. Move most Behaviors to Common

--- a/Diagnosis.App/Controls/CardParts/HealthRecordEditor.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecordEditor.xaml
@@ -8,7 +8,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
              xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
              x:Name="editor"
@@ -42,10 +41,10 @@
           GotKeyboardFocus="grid_GotKeyboardFocus"
           GotFocus="grid_GotFocus"
           LostFocus="grid_LostFocus"
-          beh:FocusExtension.IsFocused="{Binding IsFocused}"
-          beh:FocusExtension.Direct="True"
+          diag:FocusExtension.IsFocused="{Binding IsFocused}"
+          diag:FocusExtension.Direct="True"
           KeyboardNavigation.IsTabStop="False"
-          beh:FocusBehavior.FocusablePanel="True">
+          diag:FocusBehavior.FocusablePanel="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
