--- a/Diagnosis.App/Controls/Search/Filter.xaml
+++ b/Diagnosis.App/Controls/Search/Filter.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
              d:DesignHeight="30"
              d:DesignWidth="300">
@@ -17,7 +17,7 @@
 
         <TextBox x:Name="input"
                  GotKeyboardFocus="input_GotKeyboardFocus"
-                 beh:FocusExtension.IsFocused="{Binding IsFocused, Mode=TwoWay}"
+                 diag:FocusExtension.IsFocused="{Binding IsFocused, Mode=TwoWay}"
                  Text="{Binding Query, UpdateSourceTrigger=PropertyChanged}">
             <controls:WatermarkService.Watermark>
                 <TextBlock Style="{StaticResource watermark}"
