--- a/Diagnosis.App/Windows/Editors/WordEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/WordEditorWindow.xaml
@@ -3,13 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
         xmlns:ex="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
-        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
+        xmlns:diag="http://schemas.smg.com/diagnosis"
         Title="{Binding Title}"
         SizeToContent="Height"
         Width="300"
         MinWidth="200"
-        beh:DialogCloser.DialogResult="{Binding DialogResult}"
-        beh:FocusBehavior.FocusFirst="True"
+        diag:DialogCloser.DialogResult="{Binding DialogResult}"
+        diag:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False"
         UseLayoutRounding="True">
     <Grid Margin="0,0,10,10">
