--- a/Diagnosis.App/Windows/AdminSettingsWindow.xaml
+++ b/Diagnosis.App/Windows/AdminSettingsWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.AdminSettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:diag="http://schemas.smg.com/diagnosis"
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
-        beh:DialogCloser.DialogResult="{Binding DialogResult}"
+        diag:DialogCloser.DialogResult="{Binding DialogResult}"
         Title="Настройки"
         SizeToContent="Height"
         ShowInTaskbar="False"
