--- a/Diagnosis.App/Windows/Editors/AppointmentEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/AppointmentEditorWindow.xaml
@@ -2,13 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
         xmlns:ex="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+        xmlns:diag="http://schemas.smg.com/diagnosis"
         Title="{Binding Title}"
         Height="170"
         Width="250"
-        beh:DialogCloser.DialogResult="{Binding DialogResult}"
-        beh:FocusBehavior.FocusFirst="True"
+        diag:DialogCloser.DialogResult="{Binding DialogResult}"
+        diag:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False"
         ResizeMode="NoResize">
     <Grid Margin="0,0,10,10">
