--- a/Diagnosis.App/Windows/SettingsWindow.xaml
+++ b/Diagnosis.App/Windows/SettingsWindow.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
-        beh:DialogCloser.DialogResult="{Binding DialogResult}"
+        xmlns:diag="http://schemas.smg.com/diagnosis"
+        diag:DialogCloser.DialogResult="{Binding DialogResult}"
         Title="Настройки"
         SizeToContent="WidthAndHeight"
         ShowInTaskbar="False"
