--- a/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
+++ b/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
@@ -3,6 +3,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:diag="http://schemas.smg.com/diagnosis"
              x:Class="Diagnosis.App.Controls.Editors.ComboBoxDatePicker"
              mc:Ignorable="d"
              d:DesignWidth="300"
@@ -23,10 +24,10 @@
                   SelectionChanged="comboYears_SelectionChanged"
                   LostFocus="comboYears_LostFocus"
                   SelectedValue="{Binding Year, FallbackValue='', Converter={StaticResource IntToString}, ElementName=root}">
-            <controls:WatermarkService.Watermark>
+            <diag:WatermarkService.Watermark>
                 <TextBlock Style="{StaticResource watermark}"
                            Margin="5,0,0,0">Год</TextBlock>
-            </controls:WatermarkService.Watermark>
+            </diag:WatermarkService.Watermark>
         </ComboBox>
         <ComboBox x:Name="comboMonths"
                   Style="{StaticResource comboRight}"
